# compotes

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  manage.py  pyproject.toml  setup.cfg
.github/workflows/: codeql.yml  lint.yml  release.yml  test.yml
actions/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
actions/locale/fr/LC_MESSAGES/: django.mo  django.po
actions/migrations/: 0001_initial.py
actions/templates/actions/: action_table.html
compotes/: __init__.py  admin.py  asgi.py  filters.py  forms.py  models.py  settings.py  tables.py  tests.py  urls.py  views.py  wsgi.py
compotes/locale/fr/LC_MESSAGES/: django.mo  django.po
compotes/management/: __init__.py
compotes/management/commands/: __init__.py  reminder.py
compotes/migrations/: 0001_initial.py  0002_alter_debt_creditor_alter_debt_description_and_more.py  0003_alter_debt_options_alter_part_options_and_more.py  0004_alter_debt_created_alter_debt_updated_and_more.py  0005_alter_part_unique_together.py  0006_part_description.py  0007_alter_debt_creditor_alter_debt_description_and_more.py  0008_debt_name.py  0009_debt_date.py  0010_alter_debt_date.py  0011_user_slug.py  0012_alter_user_slug.py  0013_drop_scribe.py  0014_remove_debt_scribe.py  0015_log_orga.py  0016_user_respo.py
compotes/templates/: base.html
compotes/templates/admin/compotes/user/: change_list.html
compotes/templates/compotes/: _debt_detail.html  _pool_detail.html  debt_detail.html  debt_filter.html  debt_list.html  parts_form.html  pool_detail.html  pool_list.html  user_detail.html  user_list.html
compotes/templates/ndh/: form.html  formset.html  tables.html
conf/: compotes.service  compotes.timer
