[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_django = "django"
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Track debts & pools"
homepage = "https://github.com/nim65s/compotes"
license = "BSD-2-Clause"
name = "compotes"
readme = "README.md"
version = "2.0.0"

[tool.poetry.dependencies]
django-filter = "^23.5"
django-tables2 = "^2.7.0"
dmdm = "^2.0.3"
ipython = "^8.21.0"
ndh = "^6.9.1"
python = "^3.10"
yeouia = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
coverage = "^7.4.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
ruff = "^0.3.0"
safety = {allow-prereleases = true, version = "^3.0.1"}

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"

[tool.poetry.urls]
changelog = "https://github.com/nim65s/compotes/blob/main/CHANGELOG.md"

[tool.ruff]
allowed-confusables = [" "]
extend-exclude = ["migrations"]
extend-ignore = ["D203", "D213", "RUF012"]
extend-select = ["A", "B", "C", "COM", "D", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]
target-version = "py310"

[tool.tomlsort]
all = true
