[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Track debts & pools"
homepage = "https://github.com/nim65s/compotes"
license = "BSD-2-Clause"
name = "compotes"
readme = "README.md"
version = "2.0.0"

[tool.poetry.dependencies]
django-filter = "^23.5"
django-tables2 = "^2.7.0"
dmdm = "^2.0.3"
ipython = "^8.26.0"
ndh = "^6.9.1"
python = "^3.10"
yeouia = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.4"
pre-commit = "^3.7.1"
ruff = "^0.5.5"
safety = {allow-prereleases = true, version = "^3.2.3"}

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"

[tool.poetry.urls]
changelog = "https://github.com/nim65s/compotes/blob/main/CHANGELOG.md"

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py310"

[tool.ruff.lint]
allowed-confusables = [" "]
extend-ignore = ["COM812", "D203", "D213", "RUF012"]
extend-select = ["A", "B", "C", "COM", "D", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
