[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Track debts & pools"
homepage = "https://github.com/nim65s/compotes"
license = "BSD-2-Clause"
name = "compotes"
readme = "README.md"
version = "2.0.0"

[tool.poetry.dependencies]
django-filter = "^24.3"
django-tables2 = "^2.7.0"
dmdm = "^2.0.3"
ipython = "^8.30.0"
ndh = "^6.9.2"
python = "^3.10"
yeouia = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.8"
pre-commit = "^4.0.1"
ruff = "^0.8.1"
safety = {allow-prereleases = true, version = "^3.2.11"}

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"
psycopg2 = "^2.9.10"

[tool.poetry.urls]
changelog = "https://github.com/nim65s/compotes/blob/main/CHANGELOG.md"

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py310"

[tool.ruff.lint]
allowed-confusables = [" "]
extend-ignore = ["COM812", "D203", "D213", "RUF012"]
extend-select = ["A", "B", "C", "COM", "D", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
